# KupynaHash_GPT

./: CMakeLists.txt  KupynaHash.h  README.md  SboxHex_C_convert.pl  kalyna_const.txt  kalyna_constants.h  kalyna_constantsV1.h  kalyna_transform.cpp  kalyna_transform.h  kalyna_transformV1.cpp  kupyna_constants.h  kupyna_transform.cpp  kupyna_transform.h  kupyna_utils.cpp  kupyna_utils.h  main.cpp
